welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:5: error: value foreach is not a member of Int
  for (j<- 4){
           ^